# discord-shuttle-01

./: Cargo.toml  justfile
src/: commands.rs  main.rs
src/commands/: meta.rs  quotes.rs
