[package]
name = "discord-shuttle-01"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
opendal = "0.43.0"
poise = "0.5.7"
serenity = { version = "0.12.0", features = ["client"] }
shuttle-poise = "0.35.2"
shuttle-runtime = "0.35.2"
shuttle-secrets = "0.35.0"
tokio = "1.26.0"
tracing = "0.1.37"
